--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "method-override": "^2.3.10",
-    "mongoose": "^5.0.1"
+    "mongoose": "^5.0.1",
+    "vinyl-named": "^1.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.5",
